gcc/testsuite/rust/rustc/ui/parser/issues/misplaced-return-type-without-where-issue-126311.rs
fn bar<T>() -> u8 -> u64 {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

